--- a/Latex/references.bib
+++ b/Latex/references.bib
@@ -284,3 +284,31 @@ doi = {10.48550/arXiv.1712.00303}
    author={Pontoppidan, Klaus M. and Meijerink, Rowin and Dullemond, Cornelis P. and Blake, Geoffrey A.},
    year={2009},
    month=oct, pages={1482–1494} }
+
+@article{Arabhavi_2024,
+   title={Abundant hydrocarbons in the disk around a very-low-mass star},
+   volume={384},
+   ISSN={1095-9203},
+   url={http://dx.doi.org/10.1126/science.adi8147},
+   DOI={10.1126/science.adi8147},
+   number={6700},
+   journal={Science},
+   publisher={American Association for the Advancement of Science (AAAS)},
+   author={Arabhavi, A. M. and Kamp, I. and Henning, Th. and van Dishoeck, E. F. and Christiaens, V. and Gasman, D. and Perrin, A. and Güdel, M. and Tabone, B. and Kanwar, J. and Waters, L. B. F. M. and Pascucci, I. and Samland, M. and Perotti, G. and Bettoni, G. and Grant, S. L. and Lagage, P. O. and Ray, T. P. and Vandenbussche, B. and Absil, O. and Argyriou, I. and Barrado, D. and Boccaletti, A. and Bouwman, J. and Caratti o Garatti, A. and Glauser, A. M. and Lahuis, F. and Mueller, M. and Olofsson, G. and Pantin, E. and Scheithauer, S. and Morales-Calderón, M. and Franceschi, R. and Jang, H. and Pawellek, N. and Rodgers-Lee, D. and Schreiber, J. and Schwarz, K. and Temmink, M. and Vlasblom, M. and Wright, G. and Colina, L. and Östlin, G.},
+   year={2024},
+   month=jun, pages={1086–1090} }
+
+@article{RevModPhys.70.1,
+  title = {Instability, turbulence, and enhanced transport in accretion disks},
+  author = {Balbus, Steven A. and Hawley, John F.},
+  journal = {Rev. Mod. Phys.},
+  volume = {70},
+  issue = {1},
+  pages = {1--53},
+  numpages = {0},
+  year = {1998},
+  month = {Jan},
+  publisher = {American Physical Society},
+  doi = {10.1103/RevModPhys.70.1},
+  url = {https://link.aps.org/doi/10.1103/RevModPhys.70.1}
+}
